--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1072,7 +1072,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_travel_cities = list(set(top_travel_cities)ties)"
+    "unique_travel_cities = list(set(top_travel_cities))\n"
    ]
   },
   {
