--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1066,13 +1066,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Marakesh',\n",
+       " 'Salina Island',\n",
+       " 'Buenos Aires',\n",
+       " 'Pyeongchang',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Greenville',\n",
+       " 'San Antonio',\n",
+       " 'Los Cabos',\n",
+       " 'Solta',\n",
+       " 'Toronto',\n",
+       " 'Albuquerque']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unique_travel_cities = list(set(top_travel_cities))\n"
+    "unique_travel_cities = list(set(top_travel_cities))\n",
+    "unique_travel_cities"
    ]
   },
   {
