--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1126,34 +1126,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_travel_cities"
+    "unique_travel_cities\n",
+    "top_travel_cities"
    ]
   },
   {
