Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1153,7 +1153,7 @@
     }
    ],
    "source": [
-    "unique_travel_cities\n",
+    "print (\"Unique:\", unique_travel_cities\n",
     "top_travel_cities"
    ]
   },
