--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1153,8 +1153,8 @@
     }
    ],
    "source": [
-    "print (\"Unique:\", unique_travel_cities\n",
-    "top_travel_cities"
+    "print (\"Unique:\", unique_travel_cities)\n",
+    "print (\"Top:\", top_travel_cities"
    ]
   },
   {
