Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1126,35 +1126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique: ['Marakesh', 'Salina Island', 'Buenos Aires', 'Pyeongchang', 'Archipelago Sea', 'Iguazu Falls', 'Walla Walla Valley', 'Greenville', 'San Antonio', 'Los Cabos', 'Solta', 'Toronto', 'Albuquerque']\n",
+      "Top: ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang', 'San Antonio']\n"
+     ]
     }
    ],
    "source": [
     "print (\"Unique:\", unique_travel_cities)\n",
-    "print (\"Top:\", top_travel_cities"
+    "print (\"Top:\", top_travel_cities)"
    ]
   },
   {
