--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1093,7 +1093,7 @@
     }
    ],
    "source": [
-    "unique_travel_cities = list(set(top_travel_cities))\n",
+    "unique_travel_cities = list(uniqiset(top_travel_cities))\n",
     "unique_travel_cities"
    ]
   },
