--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1087,13 +1087,13 @@
        " 'Albuquerque']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_travel_cities = list(uniqiset(top_travel_cities))\n",
+    "unique_travel_cities = list(unique_travel_cities)\n",
     "unique_travel_cities"
    ]
   },
