--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1139,7 +1139,7 @@
     }
    ],
    "source": [
-    "print (\"Unique:\", unique_travel_cities)\n",
+    "print (\"Unique:\", unique_travel_cities, len(unique_travel_c))\n",
     "print (\"Top:\", top_travel_cities)"
    ]
   },
