--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1139,8 +1139,8 @@
     }
    ],
    "source": [
-    "print (\"Unique:\", unique_travel_cities, len(unique_travel_c))\n",
-    "print (\"Top:\", top_travel_cities)"
+    "print (\"Unique:\", unique_travel_cities, len(unique_travel_cities))\n",
+    "print (\"Top:\", top_travel_cities, len(top_travel_cities))"
    ]
   },
   {
