--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1126,15 +1126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique: ['Marakesh', 'Salina Island', 'Buenos Aires', 'Pyeongchang', 'Archipelago Sea', 'Iguazu Falls', 'Walla Walla Valley', 'Greenville', 'San Antonio', 'Los Cabos', 'Solta', 'Toronto', 'Albuquerque']\n",
-      "Top: ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang', 'San Antonio']\n"
+      "Unique: ['Marakesh', 'Salina Island', 'Buenos Aires', 'Pyeongchang', 'Archipelago Sea', 'Iguazu Falls', 'Walla Walla Valley', 'Greenville', 'San Antonio', 'Los Cabos', 'Solta', 'Toronto', 'Albuquerque'] 13\n",
+      "Top: ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang', 'San Antonio'] 13\n"
      ]
     }
    ],
