Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
      "output_type": "stream",
      "text": [
       "Unique: ['Marakesh', 'Salina Island', 'Buenos Aires', 'Pyeongchang', 'Archipelago Sea', 'Iguazu Falls', 'Walla Walla Valley', 'Greenville', 'San Antonio', 'Los Cabos', 'Solta', 'Toronto', 'Albuquerque'] 13\n",
-      "Top: ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang', 'San Antonio'] 13\n"
+      "Top: ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang', 'San Antonio', 'Solta'] 14\n"
      ]
     }
    ],
