Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -970,7 +970,7 @@
    ],
    "source": [
     "unique_travel_cities = set(top_travel_cities)\n",
-    "unique_travel_cities"
+    "unique_travel_cities\n"
    ]
   },
   {
